...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDashboardFragment">

    <TextView
        android:id="@+id/admin_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Administrator Dashboard"
        android:textSize="24sp"
        android:textStyle="bold"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_button_manage_users" />

    <Button
        android:id="@+id/button_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View Personal Profile"
        app:layout_constraintTop_toBottomOf="@id/admin_button_view_images"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
