...
    <item
        android:id="@+id/navigation_qr_scanner"
        android:icon="@drawable/qr"
        android:title="@string/title_qr_scanner" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_profile"
        android:title="@string/title_profile" />

</menu>
